Changelog for Shake

    Add CmdTime and CmdLine results to cmd/command
    Fix parseMakefile for words with multiple escapes in them
    #205, add WithStdout, like WithStderr
    #27, add support for capturing Stdout/Stderr with bytestrings
    Add FileStdout/FileStderr to write a stream direct to a file
    #211, add Stdouterr to capture both Stdout and Stderr streams
    Require extra-1.1 (to use nubOrd)
    Generalise cmd to work with Maybe [String]
    Add unit for use with cmd
    IMPORTANT: Incompatible on disk format change
    #209, improve orderOnly dependencies
0.14.3
    Support for the filepath shipped with GHC 7.10
    Add Timeout option to command
0.14.2
    #198, add <//> operator to join FilePatterns
    #198, fix the <.> and other extension methods to work with //
0.14.1
    #196, change the links to point at http://www.shakebuild.com/
    Improve the error messages when &%> or &?> go wrong
    Normalise file patterns used by &?>
0.14
    Make FilePattern on Windows cope with all path separators
    Rename normalise to normaliseEx
    Expose native System.FilePath in Development.Shake.FilePath
    #193, eliminate the custom version of </>
    #193, make need/orderOnly call normalise on their arguments
    #177, use the $PATH variable to resolve cmd
    #182, use js-jquery and js-flot
    #195, add getConfigKeys
    #194, replace *> with %> as the operator for rules
    #188, improve the docs on FilePattern
    #187, removeFiles on a missing directory should do nothing
    #166, add withTempFile and withTempDir in the Action monad
    Ensure Ninja response files are always deleted
    Fix incorrect units when showing profile to the console
    Require the extra library
    #178, make --help show the current executable name
0.13.4
    #171, fix the --demo mode on Linux
0.13.3
    Ensure you wait until the progress thread cleans up
    Add --demo mode
    Add --progress=record and --progress=replay
    Add -j to run with one thread per processor