@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #213, add phonys, a predicate phony rule
     Add CmdTime and CmdLine results to cmd/command
     Fix parseMakefile for words with multiple escapes in them
     #205, add WithStdout, like WithStderr
